[project]
name = "dataviz"
version = "0.1.0"
description = "Basic Data Visualization Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datashader>=0.17.0",
    "geopandas>=1.0.1",
    "geoviews>=1.14.0",
    "holoviews>=1.20.2",
    "hvplot>=0.11.2",
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "ruff>=0.11.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "streamz>=0.6.4",
]
